--- a/report/02-R_Analysis.Rmd
+++ b/report/02-R_Analysis.Rmd
@@ -25,10 +25,14 @@ library(rpart.plot)
 
 ```{r}
 data <- read.table(path_wd("..","data","raw","smoking_driking_dataset.csv"),header=TRUE, sep = ",")
+dataog <- read.table(path_wd("..","data","raw","smoking_driking_dataset.csv"),header=TRUE, sep = ",")
 data <- as.data.frame(data)
 df <- as.data.frame(data)
 data$DRK_YN <- ifelse(data$DRK_YN == "Y", 1, 0)       # MUST ONLY BE RUN ONCE !
 data$sex <- ifelse(data$sex == "Male", 1, 0)
+# Convert DRK_YN and sex columns to numeric encoding
+dataog$DRK_YN <- as.numeric(factor(df$DRK_YN))
+dataog$sex <- as.numeric(factor(df$sex))
 ```
 
 
@@ -41,8 +45,42 @@ summary(data)
 str(data)
 ```
 Remove outliers e.g. waistline 999
-```{r}
 
+```{r
+# Function to remove outliers using the IQR method for all numerical columns
+remove_outliers_all_columns <- function(df) {
+  numerical_cols <- sapply(df, is.numeric)  # Find numeric columns
+  
+  # Loop through numerical columns
+  for (col in names(df)[numerical_cols]) {
+    column <- df[[col]]
+    
+    # Calculate the IQR
+    Q1 <- quantile(column, 0.25)
+    Q3 <- quantile(column, 0.75)
+    IQR <- Q3 - Q1
+    
+    # Define the lower and upper bounds
+    lower_bound <- Q1 - 1.5 * IQR
+    upper_bound <- Q3 + 1.5 * IQR
+    
+    # Filter the dataframe to remove outliers for each column
+    df <- df[column >= lower_bound & column <= upper_bound, ]
+  }
+  
+  return(df)
+}
+
+# Remove outliers in all numerical columns of the dataframe 'df'
+data <- remove_outliers_all_columns(data)
+
+```
+
+```{r}
+summary(data)
+```
+```{r}
+summary(dataog)
 ```
 
 
@@ -79,8 +117,8 @@ We first convert the drinking data into numbers to facilitate our binary classif
 df$DRK_YN <- as.numeric(factor(df$DRK_YN))
 df$sex <- as.numeric(factor(df$sex))
 
-data$DRK_YN <- as.numeric(factor(df$DRK_YN))
-data$sex <- as.numeric(factor(df$sex))
+data$DRK_YN <- as.numeric(factor(data$DRK_YN))
+data$sex <- as.numeric(factor(data$sex))
 ```
 
 
@@ -116,6 +154,20 @@ targetsada <- sada$DRK_YN
 head(sada)
 ```
 
+```{r}
+# Example dataset (replace this with your own dataframe)
+your_data <- dataog  # Example dataset, you can replace this with your own dataframe
+
+# Adjusting plot margins and generating box plots for each column
+par(mfrow = c(ceiling(ncol(your_data) / 100), 2))  # Setting up the layout for plots
+par(mar = c(4, 4, 2, 1))  # Setting margin parameters: bottom, left, top, right
+
+for (col in names(your_data)) {
+  boxplot(your_data[[col]], main = col)  # Generating box plot for each column
+}
+
+```
+
 
 ```{r}
 # Create a scatter plot
@@ -125,7 +177,7 @@ plot(sada$weight, sada$height,
 ```
 
 ```{r}
-plot(sada$waistline,sada$gamma_GTP)
+plot(sada$hemoglobin,sada$gamma_GTP)
 ```
 
 ```{r}
@@ -240,6 +292,42 @@ print(test_confMat_pca)
 ```
 
 ```{r}
+predic <- predict(tree, X_test, type = "class")
+confusionMatrix(predic, as.factor(Y_test))
+
+```
+
+
+```{r}
+# Set up cross-validation
+control <- trainControl(method = "cv", number = 10)  # 10-fold cross-validation
+
+# Create the model using rpart and tune parameters
+model <- train(Y_train ~ ., data = cbind(X_train, Y_train), method = "rpart",
+               trControl = control,
+               tuneGrid = expand.grid(cp = seq(0.01, 0.5, by = 0.01)))  # Vary cp parameter
+
+# Show the best parameters found
+print(model)
+
+# To plot the decision tree
+final_tree <- rpart(Y_train ~ ., data = cbind(X_train, Y_train), method = "class", cp = model$bestTune$cp)
+plot(final_tree)
+text(final_tree)
+
+```
+
+
+```{r}
+trex <- rpart(Y_train ~ ., data = X_train, method = "class", control = rpart.control(maxdepth = 10, cp = 0.01))
+predx <- predict(trex, X_test, type = "class")
+confusionMatrix(predx, as.factor(Y_test))
+```
+
+
+###########
+
+```{r}
 test_confMatdf <- as.data.frame(test_confMat$table)
 ggplot(data = test_confMatdf, aes(x = Reference, y = Prediction, fill = Freq)) +
   geom_tile() +
@@ -263,8 +351,19 @@ roc_curve = roc(Y_test, as.numeric(test_pred))
 roc_curve2 = roc(Y_test_pca, as.numeric(test_pred_pca))
 plot(roc_curve, col = "blue", main = "ROC Curve")
 lines(roc_curve2, col = "red")
-legend("bottomright", legend = c("Model A", "Model B"), col = c("blue", "red"), lty = 1)
+legend("bottomright", legend = c("Decision Tree", "PCA-transfromed Decision Tree"), col = c("blue", "red"), lty = 1)
 ```
+
+### Decision Tree Analysis
+
+The best recall/sensitivity we could obtain from the decision tree is 74% (2d.p.) using all the features, whilst we had 69% (2d.p.) on the PCA-transformed dataset.
+
+Whilst not high we can be happy that the Sensitivity is higher than specificity, which is 65% (2d.p.) using all features, as we've outlined in our intro to be the most important performance metric.
+
+When trying to maximize accuracy against depth and complexity we found the lowest level of complexity to achieve greatest results. Given that the correlations of all the features with the target are low we can rule out model simplicity where a decision tree may fall short. We can also reasonably rule out the homogeneity of the features as using Principal Component Analysis with 12 entirely uncorrelated Principal Components that still captured a high enough threshold of the data, we still saw lower accuracy. 
+
+we maintain that the model is good given it's 74% true positive rate.
+
 
 ## XGBoost
 
