--- a/report/02-R_Analysis.Rmd
+++ b/report/02-R_Analysis.Rmd
@@ -11,7 +11,17 @@ date: "2023-10-09"
 Required Libraries:
 ```{r}
 if(!require("ggplot2"))install.packages("ggplot2")
-
+if(!require("corrplot"))install.packages("corrplot")
+if(!require("caret"))install.packages("caret")
+if(!require("rpart"))install.packages("rpart")
+if(!require("reshape2"))install.packages("reshape2")
+if(!require("dplyr"))install.packages("dplyr")
+if(!require("rpart.plot"))install.packages("rpart.plot")
+if(!require("caTools"))install.packages("caTools")
+if(!require("xgboost")) install.packages("xgboost")
+if(!require("pROC")) install.packages("pROC")
+library(pROC)
+library(xgboost)
 library(ggplot2)
 library(corrplot)
 library(caret)
@@ -19,13 +29,14 @@ library(rpart)
 library(reshape2)  # The reshape2 package is used for data reshaping.
 library(dplyr) # The dplyr package is used for data manipulation.
 library(rpart.plot)
+library(caTools)
 ```
 
 ## Data
 
 ```{r}
-data <- read.table(path_wd("..","data","raw","smoking_driking_dataset.csv"),header=TRUE, sep = ",")
-dataog <- read.table(path_wd("..","data","raw","smoking_driking_dataset.csv"),header=TRUE, sep = ",")
+data <- read.table("C:/Users/User/Desktop/smoking_driking_dataset.csv",header=TRUE, sep = ",")
+dataog <- read.table("C:/Users/User/Desktop/smoking_driking_dataset.csv",header=TRUE, sep = ",")
 data <- as.data.frame(data)
 df <- as.data.frame(data)
 data$DRK_YN <- ifelse(data$DRK_YN == "Y", 1, 0)       # MUST ONLY BE RUN ONCE !
@@ -44,6 +55,7 @@ head(data)
 summary(data)
 str(data)
 ```
+##!!!Remove this part!
 Remove outliers e.g. waistline 999
 
 ```{r
@@ -79,7 +91,6 @@ data <- remove_outliers_all_columns(data)
 ```{r}
 summary(data)
 ```
-
 ```{r}
 summary(dataog)
 ```
@@ -205,6 +216,7 @@ print(sorted_correlations)
 corrplot(correlation_matrix, method = "color")
 ```
 
+
 If we count the variables that have the highest impact on drinking, we find that whether drinking has a large positive correlation with the four variables of sex, height, smoking, and hemoglobin concentration, and a large negative correlation with age. 
 Among them, height has the greatest impact, which may be unexpected.
 
@@ -274,7 +286,7 @@ Y_test_pca <- target_pca[-splitIndex]
 ```
 
 ## Decision Trees
-
+A decision tree is a fundamental machine learning model used for both classification and regression tasks. It is a hierarchical structure that makes decisions based on the values of input features. In a decision tree, the data is split into subsets based on the feature values, and at each internal node of the tree, a decision is made to determine the path to follow. The leaves of the tree represent the final output or prediction.
 ```{r}
 # Assuming X_train is the matrix/data.frame of features and Y_train is the target variable
 tree <- rpart(Y_train ~ ., data = X_train, method = "class")
@@ -325,9 +337,7 @@ predx <- predict(trex, X_test, type = "class")
 confusionMatrix(predx, as.factor(Y_test))
 ```
 
-
-###########
-
+This part uses visual processing of confusion matrices
 ```{r}
 test_confMatdf <- as.data.frame(test_confMat$table)
 ggplot(data = test_confMatdf, aes(x = Reference, y = Prediction, fill = Freq)) +
@@ -371,6 +381,18 @@ we maintain that the model is good given it's 74% true positive rate.
 XGBoost, short for eXtreme Gradient Boosting, It falls under the category of ensemble learning methods and is based on decision tree models. XGBoost trains models in a gradient-boosting manner.
  It falls under the category of ensemble learning methods and is based on decision tree models. XGBoost trains models in a gradient-boosting manner. 
 code based on (https://www.kaggle.com/code/raman209/prediction-of-drinkers-using-body-signals)
+
+We first convert the drinking data into numbers to facilitate our binary classification
+
+```{r}
+# Convert DRK_YN and sex columns to numeric encoding
+df$DRK_YN <- as.numeric(factor(df$DRK_YN))
+df$sex <- as.numeric(factor(df$sex))
+
+# Replace 1 with 0 and 2 with 1 in the DRK_YN column
+df$DRK_YN[df$DRK_YN == 1] <- 0
+df$DRK_YN[df$DRK_YN == 2] <- 1
+```
 
 ```{r}
 # Select the feature columns
@@ -472,8 +494,9 @@ cat("Recall (True Positive Rate): ", format(recall, nsmall = 2), "\n")
 ```
 
 xgboost did not significantly improve the accuracy of prediction, which may be due to many reasons.
+One of the possible reasons is the data itself. It is very difficult to improve the accuracy of prediction when using all features. Our python code shows the accuracy of some model regressions, which almost all stop at around 75%. , making it almost impossible to obtain higher accuracy without more processing of the data.
 
-WARNING: Running time is about 1min
+In the normal settings of xgboost, the accuracy will change slightly with the different number of rounds, and its value is not monotonically increasing.
 ```{r}
 # Data preparation
 X_train <- as.matrix(X_train)
@@ -483,7 +506,7 @@ X_test <- as.matrix(X_test)
 y_train <- as.numeric(y_train)
 
 # List of different iteration rounds
-rounds <- c(10, 50, 75, 100, 125, 150, 200)  # You can add more rounds as needed
+rounds <- c(1,5,10, 50, 75, 100, 125, 150, 200)  # You can add more rounds as needed
 
 # Store models and accuracies for different iteration rounds
 models <- list()
@@ -518,7 +541,7 @@ print(results)
 results_df <- data.frame(Rounds = rounds, Accuracy = accuracies)
 
 # Fit a polynomial regression model (using a 6th-degree polynomial, you can adjust the degree as needed)
-poly_fit <- lm(Accuracy ~ poly(Rounds, 4), data = results_df)
+poly_fit <- lm(Accuracy ~ poly(Rounds, 7), data = results_df)
 
 # Create a new data frame for plotting the fitted curve
 plot_data <- data.frame(Rounds = seq(min(rounds), max(rounds), length.out = 100))
@@ -533,10 +556,10 @@ max_round <- plot_data$Rounds[which.max(plot_data$Accuracy)]
 # Create the plot object, set the axis limits
 p <- ggplot(results_df, aes(x = Rounds, y = Accuracy)) +
   geom_point() +  # Plot the original data points
-  geom_line(data = plot_data, aes(x = Rounds, y = Accuracy), color = "blue") +  # Plot the fitted curve
+  #geom_line(data = plot_data, aes(x = Rounds, y = Accuracy), color = "blue") +  # Plot the fitted curve
   labs(x = "Rounds", y = "Accuracy") +  # Set axis labels
   theme_minimal() +  # Set the plot theme
-  ylim(0.725, 0.745)  # Set the y-axis limits
+  ylim(0.72, 0.745)  # Set the y-axis limits
 
 # Add a label for the maximum value
 p <- p + annotate("text", x = max_round, y = max_accuracy, label = paste("Max Accuracy =", round(max_accuracy, 4)), vjust = -1, hjust = 0.5, color = "red")
@@ -547,13 +570,15 @@ p <- p + annotate("text", x = max_round, y = max_accuracy, label = paste("at Rou
 # Display the plot
 print(p)
 ```
-The interesting phenomenon is that as the number of boost rounds increases, the accuracy will first increase, and then slowly decrease to a stable value.
+The maximum accuracy is in the rounds interval 80-100, which is approximately 0.7371.
+The rounds parameter in XGBoost determines the complexity of the model. A lower value of rounds can lead to underfitting, where the model is too simple to capture the underlying patterns in the data. Conversely, a higher value of rounds can result in overfitting, where the model becomes excessively complex and starts fitting the noise in the training data.
 
-## XGBoost Analysis
+In this model, the rounds value is set to 100 to ensure that the model is accurate enough.
 
+## Analysis of xgboost
 
+The True Positive Rate provided by xgboost is about 0.738, which is almost equal to the max accuracy it provides.
+Compared with the decision tree model, xgboost did not significantly improve the accuracy of prediction, which may be due to many reasons. One of the possible reasons is the data itself.Due to its characteristics, model regression in most cases may not provide higher accuracy unless more detailed or targeted processing is performed.
 
-
-## Joint Analyses
-
+However, compared to accuracy, the most powerful thing about the xgboost model is its saving of computing time! After the number of rounds reaches more than 10 times, the change in accuracy has been less than 1%. In actual use, 10-20 boost rounds can meet the demand. Even when processing larger data, the xgboost algorithm will greatly reduce the calculation time. In other words, the xgboost algorithm is excellent in both efficiency and accuracy.
 
