--- a/report/02-R_Analysis.Rmd
+++ b/report/02-R_Analysis.Rmd
@@ -35,8 +35,7 @@ library(caTools)
 ## Data
 
 ```{r}
-data <- read.table("C:/Users/User/Desktop/smoking_driking_dataset.csv",header=TRUE, sep = ",")
-dataog <- read.table("C:/Users/User/Desktop/smoking_driking_dataset.csv",header=TRUE, sep = ",")
+data <- data <- read.table(path_wd("..","data","raw","smoking_driking_dataset.csv"),header=TRUE, sep = ",")
 data <- as.data.frame(data)
 df <- as.data.frame(data)
 data$DRK_YN <- ifelse(data$DRK_YN == "Y", 1, 0)       # MUST ONLY BE RUN ONCE !
@@ -310,8 +309,8 @@ confusionMatrix(predic, as.factor(Y_test))
 
 ```
 
-
-```{r}
+## leave to be edited
+```{r
 # Set up cross-validation
 control <- trainControl(method = "cv", number = 10)  # 10-fold cross-validation
 
